<resources>
    <string name="app_name">Layout Type</string>
    <string name="save">Save</string>
    <string name="organization">Organization:</string>
    <string name="name">Name:</string>
    <string name="tony_stark">Tony Stark</string>
    <string name="mirea">Mirea</string>
    <string name="_7_911_111_11_11">+7(911)-111-11-11</string>
    <string name="mobile">(Mobile)</string>
    <string name="todo">TODO</string>
    <string name="call">call</string>
</resources>